# Macademia-Project-PAR

./: .gitignore  README.md  tree_testing.ipynb
Macadamia_challange/src/par_coursework/Macadamia_challenge/: README.md  package.xml  setup.py
Macadamia_challange/src/par_coursework/Macadamia_challenge/launch/: integrated_macadamia_challenge.launch.py  integrated_macadamia_challenge_V2.launch.py  (+3 more)
Node4-Tree_Waypoint/src/par_coursework/tree_waypoint_planner/: README.md  package.xml  setup.py
Node4-Tree_Waypoint/src/par_coursework/tree_waypoint_planner/launch/: tree_waypoint_planner.launch.py  tree_waypoint_stack.launch.py
Node4-Tree_Waypoint/src/par_coursework/tree_waypoint_planner/tree_waypoint_planner/: fake_boundary_filter_node.py  fake_tree_publisher_node.py  nav2_waypoint_sender_node.py  tree_memory_node.py  tree_waypoint_planner_node.py
ai_folder/changes/: spiral_controller_logging_fix.py  spiral_controller_nav2.py  spiral_controller_nav2_waypoint.py
aiil ssh keys/: default_rmit_public_vm  default_rmit_public_vm.pub
macadamia_challenge/: package.xml  setup.cfg  setup.py
macadamia_challenge/launch/: macadamia_challenge.launch.py
macadamia_challenge/macadamia_challenge/: orchard_state_controller.py  spiral_controller.py  spiral_controller_nav2_waypoint.py
orchard_global_planner/: README.md  package.xml  setup.cfg  setup.py
orchard_global_planner/launch/: planner.launch.py
orchard_global_planner/orchard_global_planner/: navigator_node.py  planner_node.py
orchard_global_planner/orchard_global_planner/install/: local_setup.sh  setup.sh
orchard_global_planner/orchard_global_planner/log/: latest_build
project_files/src/par_coursework/tree_waypoint_planner/: package.xml  setup.cfg
tree_mapper/: Creation process.docx  package.xml  setup.cfg  setup.py
tree_mapper/launch/: tree_mapper.launch.py
tree_mapper/maps/: custom_gazebo.pgm  custom_gazebo.yaml  may.pgm  may.yaml  may_29_748.yaml  may_29_8_51.pgm  may_29_8_51.yaml  may_29_8_59.pgm  may_29_8_59.yaml  may_29_9_00.pgm  may_29_9_00.yaml  may_29_9_01.pgm  may_29_9_01.yaml  testing.pgm  testing.yaml  turtlebot_area.pgm  turtlebot_area.yaml  ulthwe_static_map.pgm  ulthwe_static_map.yaml  urukhai_dynamic_map.pgm  urukhai_dynamic_map.yaml
tree_mapper/tree_mapper/: tree_mapper_node.py
(+15 files in other folders)
