<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tree_mapper</name>
  <version>0.0.1</version>
  <description>node for detecting trees in a map outputed by the ros mapper</description>
  <maintainer email="s4005841@student.rmit.edu.au">Josh</maintainer>
  <license>Apache-2.0</license>

  <export>
    <build_type>ament_python</build_type>

    <exec_depend>action_msgs</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>rclpy</exec_depend> 
    <exec_depend>std_msgs</exec_depend> 
    <exec_depend>geometry_msgs</exec_depend> 
    <exec_depend>nav_msgs</exec_depend> 
    <exec_depend>sensor_msgs</exec_depend> 
    <exec_depend>visualization_msgs</exec_depend> 
    <exec_depend>tf2_ros</exec_depend> 
    <exec_depend>tf2_geometry_msgs</exec_depend> 
    <exec_depend>nav2_msgs</exec_depend> 
    <exec_depend>find_object_2d</exec_depend> 
    <exec_depend>image_geometry</exec_depend> 
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
      <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

  </export>
</package>